<resources>
    <string name="app_name">EBI</string>
    <string name="login_sign_up_hint">Don\'t have an account? Create</string>
    <string name="submit">Submit</string>
    <string name="text_account_number">Account Number</string>
    <string name="title_exalture_bank">Exalture Bank</string>
    <string name="forgot_pin">Forgot Pin?</string>
    <string name="text_show">Show</string>
    <string name="text_hide">Hide</string>
    <string name="text_proceed">Proceed</string>
    <string name="text_balance_inquiry">Balance Inquiry</string>
    <string name="text_deposit">Deposit</string>
    <string name="text_services">services</string>
    <string name="text_withdrawal">Withdrawal</string>
    <string name="text_mini_statement">Mini Statement</string>
    <string name="text_change_pin">Change Pin</string>
    <string name="text_transfer">Transfer</string>
    <string name="text_others">Others</string>
    <string name="text_exit">Exit</string>
    <string name="hint_amount">Amount</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_available_balance">Available Balance</string>
    <string name="text_view_balance">View Balance</string>
    <string name="text_back_to_main">Back to Main</string>
    <string name="rupee_symbol">₹</string>
    <string name="hint_type_your_pin_here">Type your pin here</string>
    <string name="hint_confirm_your_pin">Confirm your pin</string>
    <string name="page_icon_ratio">1:1.5</string>
    <string name="text_new_account">New Account</string>
    <string name="text_account_holder_s_name">Account Holder\'s Name</string>
    <string name="text_communication_address">Communication Address</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_account_opening_amount">Account Opening Amount</string>
    <string name="label_account_type">Account Type:</string>
    <string name="text_savings">Savings</string>
    <string name="text_current">Current</string>
    <string name="text_create">Create</string>
    <string name="title_choose_account_type">Choose Account Type</string>
    <string name="text_total_available_balance">Total Available Balance</string>
    <string name="text_update">Update</string>
    <string name="title_pin_number">Pin Number</string>
    <string name="label_available_balance_rs">Available Balance: Rs.</string>
    <string name="hint_remarks">Remarks</string>
    <string name="text_to_account_number">To Account Number</string>
    <string name="text_dr">Dr</string>
    <string name="text_cr">Cr</string>
    <string name="label_transaction_id">Transaction ID</string>
    <string name="title_transaction_details">Transaction Details</string>
    <string name="label_transaction_amount">Transaction Amount</string>
    <string name="label_transaction_date">Transaction Date</string>
    <string name="label_transaction_time">Transaction Time</string>
    <string name="label_transaction_remarks">Transaction Remarks</string>
    <string name="text_close">Close</string>
    <string name="error_name_validation">Name must be minimum 3 length</string>
    <string name="hint_account_opening_amount_optional">Account Opening Amount (Optional)</string>
    <string name="error_address_validation">Address must be minimum 5 length</string>
    <string name="error_phone_validation">Phone must be minimum 10 length</string>
    <string name="error_opening_amount_validation">Opening Amount must be minimum 1000</string>
    <string name="error_required_validation">Required</string>
    <string name="error_number_registered">Phone Number already registered</string>
    <string name="title_account_details">Account \nDetails</string>
    <string name="text_temporary_pin">Temporary Pin *</string>
    <string name="text_view_details">View Details</string>
    <string name="text_authenticate">Authenticate</string>
    <string name="message_temporary_pin">Please note down the Account Number &amp; PIN \n* Change the PIN as soon as possible</string>
    <string name="text_account_created_successfully">Account Created Successfully</string>
    <string name="error_account_number_invalid">Invalid account number</string>
    <string name="error_not_registered">Account number not registered</string>

    <string name="type_rent">Rent</string>
    <string name="type_sale">Sale</string>
    <string name="display_type">For %s</string>
    <string name="display_price_monthly_rental">$%,.0f/month</string>
    <string name="display_price">$%,.0f</string>
</resources>