<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_low_bottom"
        android:padding="24dp"
        tools:context=".changepin.ChangePinFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="@id/guideline3"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_pin_change"
            android:tint="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="@id/guideline3"
            app:layout_constraintDimensionRatio="@string/page_icon_ratio"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/header"
                style="@style/landingHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_exalture_bank"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/subHeader"
                style="@style/subHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_change_pin"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header" />

            <com.poovam.pinedittextfield.LinePinField
                android:id="@+id/editTextPin"
                style="@style/modifiedEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value_20"
                android:hint="@string/hint_type_your_pin_here"
                android:inputType='numberPassword'
                android:textSelectHandle="@drawable/text_handle"
                app:bottomTextPaddingDp="@dimen/value_10"
                app:distanceInBetween="15dp"
                app:highlightColor="@color/colorPrimary"
                app:highlightType="currentField"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subHeader"
                app:noOfFields="4" />

            <com.poovam.pinedittextfield.LinePinField
                android:id="@+id/editTextPinConfirm"
                style="@style/modifiedEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirm_your_pin"
                android:inputType='numberPassword'
                android:textSelectHandle="@drawable/text_handle"
                app:bottomTextPaddingDp="@dimen/value_10"
                app:distanceInBetween="15dp"
                app:highlightColor="@color/colorPrimary"
                app:highlightType="currentField"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextPin"
                app:noOfFields="4" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submitButton"
                style="@style/gradientButton"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/value_20"
                android:text="@string/text_proceed"
                android:textAllCaps="true"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextPinConfirm" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancelButton"
                style="@style/gradientButton"
                android:layout_width="wrap_content"
                android:text="@string/text_back_to_main"
                android:textAllCaps="true"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/submitButton" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>