<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_low_bottom"
        android:padding="24dp"
        tools:context=".phone.PhoneFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="@id/guideline3"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/icon_others"
            android:tint="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="@id/guideline3"
            app:layout_constraintDimensionRatio="@string/page_icon_ratio"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/header"
                style="@style/landingHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_exalture_bank"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/subHeader"
                style="@style/subHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_update"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputAccount"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value_20"
                app:layout_constraintTop_toBottomOf="@id/subHeader">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    style="@style/modifiedEditText"
                    android:hint="@string/hint_phone_number"
                    android:inputType="number"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submitButton"
                style="@style/gradientButton"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/value_20"
                android:text="@string/text_proceed"
                android:textAllCaps="true"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputAccount" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancelButton"
                style="@style/gradientButton"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/value_20"
                android:text="@string/text_cancel"
                android:textAllCaps="true"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputAccount" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>