<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="createAccountViewModel"
            type="com.exalture.atm.register.CreateAccountViewModel" />

        <import type="com.exalture.atm.register.CreateAccountViewModel.FormErrors" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_low_bottom"
        android:padding="24dp"
        tools:context=".register.CreateAccountFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="@id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/header"
                style="@style/landingHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value_20"
                android:text="@string/title_exalture_bank"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/subHeader"
                style="@style/subHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_new_account"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value_20"
                app:layout_constraintTop_toBottomOf="@id/subHeader">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextName"
                    style="@style/modifiedEditText"
                    android:hint="@string/text_account_holder_s_name"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text="@={createAccountViewModel.fullName}"
                    app:formErrors="@{createAccountViewModel.formErrors}"
                    app:nameValidator="@{createAccountViewModel.fullName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputAddress"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value_10"
                app:layout_constraintTop_toBottomOf="@id/textInputName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextAddress"
                    style="@style/modifiedEditText"
                    android:hint="@string/text_communication_address"
                    android:inputType="textPostalAddress"
                    android:maxLines="1"
                    android:text="@={createAccountViewModel.address}"
                    app:addressValidator="@{createAccountViewModel.address}"
                    app:formErrors="@{createAccountViewModel.formErrors}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPhone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value_10"
                app:layout_constraintTop_toBottomOf="@id/textInputAddress">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPhone"
                    style="@style/modifiedEditText"
                    android:hint="@string/hint_phone_number"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:text="@={createAccountViewModel.phoneNumber}"
                    app:formErrors="@{createAccountViewModel.formErrors}"
                    app:phoneValidator="@{createAccountViewModel.phoneNumber}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputAmount"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value_10"
                app:layout_constraintTop_toBottomOf="@id/textInputPhone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextAmount"
                    style="@style/modifiedEditText"
                    android:inputType="number"
                    android:maxLines="1"
                    android:text="@={createAccountViewModel.amount}"
                    app:amountValidator="@{createAccountViewModel.amount}"
                    app:formErrors="@{createAccountViewModel.formErrors}"
                    app:isSavings="@{createAccountViewModel.isSavingAccount()}" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/accountTypeLabel"
                style="@style/modifiedEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_account_type"
                app:layout_constraintBottom_toBottomOf="@id/radio_group"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/radio_group" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toEndOf="@id/accountTypeLabel"
                app:layout_constraintTop_toBottomOf="@id/textInputAmount">

                <RadioButton
                    android:id="@+id/savings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:checked="@{createAccountViewModel.isSavingAccount().equals(true)}"
                    android:onClick="@{()-> createAccountViewModel.onAccountType(true)}"
                    android:text="@string/text_savings" />

                <RadioButton
                    android:id="@+id/current"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:checked="@{createAccountViewModel.isSavingAccount().equals(false)}"
                    android:onClick="@{()-> createAccountViewModel.onAccountType(false)}"
                    android:text="@string/text_current" />
            </RadioGroup>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createAccount"
                style="@style/gradientButton"
                android:layout_width="0dp"
                android:onClick="@{()-> createAccountViewModel.onCreateAccountClick()}"
                android:text="@string/text_create"
                android:textAllCaps="true"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radio_group" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/back"
                style="@style/gradientButton"
                android:layout_width="0dp"
                android:onClick="@{()-> createAccountViewModel.backNavigation()}"
                android:text="@string/text_cancel"
                android:textAllCaps="true"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radio_group" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".7" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>